Fix css overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ h1, h2, h3, blockquote {
   font-family: 'Share Tech', sans-serif;
   font-weight: 700;
   font-style: normal;
-  word-wrap: break-word;
+  word-wrap: normal;
   white-space: normal;
 }
 
@@ -58,7 +58,8 @@ header {
 
 section {
   margin-left: 3rem;
-  grid-column: 1 / 8;
+  grid-column: 1 / 9;
+  width: fit-content;
   padding: 1rem;
   background: var(--dark-bg);
   font-size: 1.25rem;
@@ -82,8 +83,8 @@ blockquote p {
   line-height: 4.5rem;
 }
 
-.left {
-  grid-column: 6 / 12;
+.right {
+  grid-column: 3 / 12;
 }
 
 canvas {
